--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,7 +66,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^3.0.1
-  injectable_generator: ^2.6.1
+  injectable_generator: 2.4.1
   build_runner: ^2.4.6
 
 
