--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <application
-        android:label="ecommerce_flutter"
+        android:label="La Leña APP"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
