--- a/restaurante/pubspec.yaml
+++ b/restaurante/pubspec.yaml
@@ -44,10 +44,11 @@ dependencies:
   shared_preferences: ^2.2.3
   uuid: ^4.4.0
   intl: ^0.19.0
-  socket_io_client: ^2.0.3+1
+  socket_io_client: ^3.0.0-beta.2
   timezone: ^0.9.3
   blue_thermal_printer: ^1.2.0
   path_provider: ^2.1.3
+  speech_to_text: ^6.6.1
   
 
 dev_dependencies:
